@@ -20,6 +20,7 @@
 /test/test
 /bindings/ece.py
 /bindings/*_wrap.c
+/bindings/build
 
 # dist-generated files
 /libece-*
